add extra hackathon win

--- a/main.tex
+++ b/main.tex
@@ -203,7 +203,8 @@
             {Hackathon Achievements}{2023 -- 2025}
             {Multiple Award-Winning Projects}{Singapore}
             \resumeItemListStart
-                \resumeItem{\textbf{NUS Hack4Good}: 1st Place (2025) |
+                \resumeItem{\textbf{NUS Hack4Good}: 1st Place (2025) | 
+                \textbf{SP Energized}: 1st Place (2025)} | 
                 \textbf{Dell InnovateDash}: 1st Runner-Up (2025) |
                 \textbf{NCS AI League}: 2nd Runner-Up (2025) |
                 \textbf{NES Ground Zero}: Best Presentation (2025) |
